JWT e Bearer configurado

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySqlConnectionString": "Server=localhost;Database=restapi;userid=root;password="
+    "MySqlConnectionString": "Server=localhost;Database=;userid=;password="
   }
 }
